[gd_scene load_steps=18 format=3 uid="uid://bcfw5sy5t2e63"]

[ext_resource type="Script" path="res://GAME/Scripts/Gameplay/Mobs/Walkers/end_screen.gd" id="1_jryw4"]
[ext_resource type="Shader" path="res://GAME/Scripts/Shaders/background.gdshader" id="2_45ivh"]
[ext_resource type="Script" path="res://GAME/Scripts/UI/ticket.gd" id="2_i7y6o"]
[ext_resource type="Script" path="res://GAME/Scripts/UI/name.gd" id="4_vscu7"]

[sub_resource type="ImageTexture" id="ImageTexture_b3ied"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_31ev0"]
shader = ExtResource("2_45ivh")
shader_parameter/blur_type = 0
shader_parameter/blur_amount = 16
shader_parameter/blur_radius = 1.0
shader_parameter/blur_direction = Vector2(1, 1)

[sub_resource type="FontFile" id="FontFile_h4wid"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0

[sub_resource type="InputEventKey" id="InputEventKey_x4x38"]
device = -1
keycode = 87
unicode = 119

[sub_resource type="InputEventKey" id="InputEventKey_ym0l5"]
device = -1
keycode = 4194320

[sub_resource type="Shortcut" id="Shortcut_u07c5"]
events = [SubResource("InputEventKey_x4x38"), SubResource("InputEventKey_ym0l5")]

[sub_resource type="InputEventKey" id="InputEventKey_5ugo4"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_kh60b"]
events = [SubResource("InputEventKey_5ugo4")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdp1h"]
bg_color = Color(1, 1, 1, 0.823529)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15

[sub_resource type="FontVariation" id="FontVariation_xh842"]
spacing_top = 3
spacing_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phy1a"]
bg_color = Color(1, 1, 1, 0.823529)
border_width_left = 3
border_width_top = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_bottom_left = 15
anti_aliasing = false

[sub_resource type="FontVariation" id="FontVariation_ghymv"]
spacing_top = 3
spacing_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4tdr"]
bg_color = Color(1, 1, 1, 0.823529)
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_bottom_right = 15
anti_aliasing = false

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource("1_jryw4")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_b3ied")

[node name="background" type="ColorRect" parent="TextureRect"]
material = SubResource("ShaderMaterial_31ev0")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 290.0
offset_top = 1.0
offset_right = 862.0
offset_bottom = 157.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "DRUNK WHEEL"

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "You made it home..."

[node name="Creator" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -461.0
offset_top = -40.0
offset_right = -15.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Adrien Rey, Alec Schmidt, Mathieu Schupbach "

[node name="Context" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -35.0
offset_right = 287.0
offset_bottom = -12.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "MSE -  MA_GT 2024/2025"

[node name="Ticket" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 382.0
offset_top = 170.0
offset_right = 383.0
offset_bottom = 171.0
script = ExtResource("2_i7y6o")

[node name="VBoxContainer2" type="VBoxContainer" parent="Ticket"]
layout_mode = 0
offset_right = 387.0
offset_bottom = 326.0

[node name="Header" type="Label" parent="Ticket/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 24
text = "SCORE"

[node name="HBoxContainer" type="HBoxContainer" parent="Ticket/VBoxContainer2"]
layout_mode = 2

[node name="Text_container" type="VBoxContainer" parent="Ticket/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Line2" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
text = "--------------------------------"

[node name="Total_points" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = "Total points earned :     "

[node name="Damage" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = "
Damage costs :"

[node name="Damage_costs" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20

[node name="Line" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
text = "--------------------------------"

[node name="Final_score" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = "Final score : "

[node name="Best_score" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = "Best score :"

[node name="Line3" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Text_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
text = "--------------------------------"

[node name="Score_container" type="VBoxContainer" parent="Ticket/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="Line2" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
text = "---------------------------
"

[node name="Total_points" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = " "

[node name="Damage" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = "
 "

[node name="Damage_costs" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20

[node name="Line" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
text = "---------------------------"

[node name="Final_score" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = " "

[node name="Best_score" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = " "

[node name="Line3" type="Label" parent="Ticket/VBoxContainer2/HBoxContainer/Score_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
text = "---------------------------"

[node name="Header2" type="Label" parent="Ticket/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_h4wid")
theme_override_font_sizes/font_size = 20
text = " "

[node name="VBoxContainer2" type="HBoxContainer" parent="Ticket/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="Ticket/VBoxContainer2/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
disabled = true
shortcut = SubResource("Shortcut_u07c5")
text = " Press W to restart "

[node name="Quit" type="Button" parent="Ticket/VBoxContainer2/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
disabled = true
shortcut = SubResource("Shortcut_kh60b")
text = "    Press Q to quit    "

[node name="VBoxContainer3" type="HBoxContainer" parent="Ticket/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Name" type="LineEdit" parent="Ticket/VBoxContainer2/VBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
context_menu_enabled = false
script = ExtResource("4_vscu7")

[node name="Sign" type="Button" parent="Ticket/VBoxContainer2/VBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
shortcut = SubResource("Shortcut_kh60b")
text = "Sign (Enter)"

[node name="Scores_title" type="Label" parent="."]
offset_left = 850.0
offset_top = 118.0
offset_right = 1130.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_jdp1h")
text = "Top 10"
horizontal_alignment = 1
uppercase = true

[node name="Scores_name" type="Label" parent="."]
offset_left = 850.0
offset_top = 170.0
offset_right = 990.0
offset_bottom = 570.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_xh842")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_phy1a")
horizontal_alignment = 2

[node name="Scores_value" type="Label" parent="."]
offset_left = 990.0
offset_top = 170.0
offset_right = 1130.0
offset_bottom = 570.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_ghymv")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_u4tdr")

[connection signal="pressed" from="Ticket/VBoxContainer2/VBoxContainer2/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Ticket/VBoxContainer2/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
[connection signal="text_changed" from="Ticket/VBoxContainer2/VBoxContainer3/Name" to="Ticket/VBoxContainer2/VBoxContainer3/Name" method="_on_text_changed"]
[connection signal="text_submitted" from="Ticket/VBoxContainer2/VBoxContainer3/Name" to="." method="_on_name_text_submitted"]
[connection signal="pressed" from="Ticket/VBoxContainer2/VBoxContainer3/Sign" to="." method="_on_sign_pressed"]
